# Inventory

./: .gitignore  app.py  database.py  database.xlsx  main.py  model.py  pyproject.toml  temp.py
