[project]
name = "inventory-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "jsonify>=0.5",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pydantic>=2.12.5",
    "uvicorn[standard]>=0.42.0",
]
